[tool.poetry]
name = "rle-assginment"
version = "0.1.0"
description = ""
authors = ["Nicola Rohenr <social@nicolarohner.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "0.28.1"
tensorboard = "^2.18.0"
torch-tb-profiler = "^0.4.3"
tyro = "^0.9.2"
stable_baselines3 = "2.0.0a1"
ale-py = "0.8.1"
moviepy = "^2.1.1"
opencv-python = "^4.10.0.84"
torchvision = {version = "^0.20.1+cu118", source = "pytorch-gpu"}
torchaudio = {version = "^2.5.1+cu118", source = "pytorch-gpu"}
torch = {version = "^2.5.1+cu118", source = "pytorch-gpu"}
scikit-image = "^0.25.0"
seaborn = "^0.13.2"



[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
